--- a/TP0/ReceiverEmitter.ipynb
+++ b/TP0/ReceiverEmitter.ipynb
@@ -52,20 +52,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from cryptography.hazmat.primitives import hashes\n",
+    "from cryptography.hazmat.primitives.kdf.pbkdf2 import PBKDF2HMAC\n",
+    "from cryptography.hazmat.backends import default_backend\n",
+    "\n",
+    "backend = default_backend()\n",
     "cred_salt = os.urandom(16)\n",
+    "kdf = PBKDF2HMAC(algorithm=hashes.SHA256(), length=32, salt=cred_salt, iterations=100000, backend=backend)\n",
     "\n",
     "def Receiver(connection):\n",
     "    pwd = getpass('Reciever password: ')\n",
-    "    #TODO: generate password via kdf\n",
+    "    kdf.verify(pwd.encode(\"utf-8\"), key)\n",
     "    payload = conn.recv()\n",
     "    #TODO: Verify integrity/authenticity and decrypt\n",
     "    conn.close()\n",
     "\n",
     "def Emitter(connection):\n",
     "    pwd = getpass('Emitter password: ')\n",
-    "    #TODO: generate password via kdf\n",
+    "    key = kdf.derive(pwd.encode(\"utf-8\"))\n",
     "    payload = 'hello'\n",
-    "    #TODO: Authenticate and encrypt\n",
+    "    payload\n",
     "    conn.send(payload)\n",
     "    conn.close()"
    ]
@@ -86,12 +92,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Connection' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-3da3095ff4ba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mConnection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mReceiver\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEmitter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmanual\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'Connection' is not defined"
+     ]
+    }
+   ],
    "source": [
     "Connection(Receiver, Emitter).manual()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
