--- a/TP0/ReceiverEmitter.ipynb
+++ b/TP0/ReceiverEmitter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,72 +43,113 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Receiver e Emitter"
+    "## Receiver e Emitter\n",
+    "\n",
+    "A comunicação entre dois agentes com recurso à classe anteriormente definida é feita por meio de duas funções\n",
+    "`Emitter` e `Receiver` que enviam e recebem, respetivamente, uma mensagem de cada vez que são invocadas.\n",
+    "Ambos os intervenientes devem introduzir uma palavra passe que permitirá a posterior autenticação e cifragem\n",
+    "dos dados trocados entre os mesmos. Esta palavra passe é depois processada por um mecanismo de derivação de chaves\n",
+    "conhecido como *Password-Based Key Derivation Function* (**PBDKF**) que permite obter chaves de \n",
+    "tamanho arbitrário a partir de dados de tamanho reduzido que combina com um valor aleatório conhecido como *salt*.\n",
+    "\n",
+    "Por forma a garantir a confidenficialidade do conteúdo das mensagens bem como a autenticidade e integridade destas\n",
+    "e de dados associados (metadados) foi usada a cifra simétrica AES em modo GCM (*Gallois/Counter Mode*) que permite a \n",
+    "autenticação de dados adicionais invocando o método:\n",
+    "\n",
+    "```\n",
+    "cipher.authenticate_additional_data(header.encode(\"utf-8\"))\n",
+    "```\n",
+    "\n",
+    "Esta autenticação é feita via uma *tag* que deve ser introduzida no momento de decifragem dos dados e, caso não corresponda ao valor esperado, resulta numa exceção.\n",
+    "\n",
+    "Para além da mensagem trocada entre os dois interveniente são ainda enviados dados que permitem a sua decifragem\n",
+    "por parte do `Receiver` nomeadamente o IV (*Initialization Vector*) usado na cifragem dos dados, a *tag* esperada\n",
+    "para decifrar os mesmos e ainda os metadados previamente autenticados:\n",
+    "\n",
+    "```\n",
+    "payload = {'header': header, 'content': content, 'iv':iv, 'tag': cipher.tag}\n",
+    "        \n",
+    "conn.send(payload)\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from cryptography.hazmat.primitives import hashes\n",
     "from cryptography.hazmat.primitives.kdf.pbkdf2 import PBKDF2HMAC\n",
     "from cryptography.hazmat.backends import default_backend\n",
+    "from cryptography.hazmat.primitives.ciphers import (\n",
+    "    Cipher, algorithms, modes\n",
+    ")\n",
     "\n",
     "backend = default_backend()\n",
     "cred_salt = os.urandom(16)\n",
-    "kdf = PBKDF2HMAC(algorithm=hashes.SHA256(), length=32, salt=cred_salt, iterations=100000, backend=backend)\n",
     "\n",
-    "def Receiver(connection):\n",
+    "def Receiver(conn):\n",
     "    pwd = getpass('Reciever password: ')\n",
-    "    kdf.verify(pwd.encode(\"utf-8\"), key)\n",
-    "    payload = conn.recv()\n",
-    "    #TODO: Verify integrity/authenticity and decrypt\n",
-    "    conn.close()\n",
+    "    try:\n",
+    "        kdf = PBKDF2HMAC(algorithm=hashes.SHA256(), length=32, salt=cred_salt, iterations=100000, backend=backend)\n",
+    "        key = kdf.derive(pwd.encode(\"utf-8\"))\n",
+    "        payload = conn.recv()\n",
+    "        iv = payload['iv']\n",
+    "        tag = payload['tag']\n",
+    "        header = payload['header']\n",
+    "        ctxt = payload['content']\n",
     "\n",
-    "def Emitter(connection):\n",
+    "        decryptor = Cipher(algorithms.AES(key),modes.GCM(iv, tag),backend).decryptor()\n",
+    "        decryptor.authenticate_additional_data(header)\n",
+    "        print(\"Received: \"+(decryptor.update(ctxt) + decryptor.finalize()).decode(\"utf-8\"))\n",
+    "        conn.close()\n",
+    "    except:\n",
+    "        print(\"Receiver: Erro na autenticação da mensagem\")\n",
+    "\n",
+    "def Emitter(conn):\n",
     "    pwd = getpass('Emitter password: ')\n",
-    "    key = kdf.derive(pwd.encode(\"utf-8\"))\n",
-    "    payload = 'hello'\n",
-    "    payload\n",
-    "    conn.send(payload)\n",
-    "    conn.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Primitivas Criptográficas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Para executar a aplicação desenvolvida basta invocar o método `manual` da classe `Connection` após criar um objeto desse tipo."
+    "    try:\n",
+    "        kdf = PBKDF2HMAC(algorithm=hashes.SHA256(), length=32, salt=cred_salt, iterations=100000, backend=backend)\n",
+    "        key = kdf.derive(pwd.encode(\"utf-8\"))\n",
+    "        iv = os.urandom(12)\n",
+    "        #AES in GCM mode to provide both confidentiality and authentication\n",
+    "        cipher = Cipher(algorithms.AES(key),modes.GCM(iv),backend).encryptor()\n",
+    "\n",
+    "        header = 'msgheader'.encode(\"utf-8\")\n",
+    "        content = 'Here is a sample message for testing'\n",
+    "\n",
+    "        cipher.authenticate_additional_data(header)\n",
+    "        print(\"here\")\n",
+    "        content = cipher.update(content.encode(\"utf-8\")) + cipher.finalize()\n",
+    "\n",
+    "        payload = {'header': header, 'content': content, 'iv':iv, 'tag': cipher.tag}\n",
+    "\n",
+    "        conn.send(payload)\n",
+    "        conn.close()\n",
+    "    except:\n",
+    "       print(\"Emitter: Error\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Connection' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-3da3095ff4ba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mConnection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mReceiver\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEmitter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmanual\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'Connection' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Emitter password: ········\n",
+      "here\n",
+      "Reciever password: ········\n",
+      "Here is a sample message for testing\n"
      ]
     }
    ],
    "source": [
-    "Connection(Receiver, Emitter).manual()"
+    "Connection(Emitter, Receiver, timeout=10).manual()"
    ]
   },
   {
@@ -135,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
