--- a/TP0/ReceiverEmitter.ipynb
+++ b/TP0/ReceiverEmitter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,17 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from cryptography.hazmat.primitives import hashes\n",
     "from cryptography.hazmat.primitives.kdf.pbkdf2 import PBKDF2HMAC\n",
     "from cryptography.hazmat.backends import default_backend\n",
     "from cryptography.hazmat.primitives.ciphers import (\n",
     "    Cipher, algorithms, modes\n",
     ")\n",
+    "import os\n",
     "\n",
     "backend = default_backend()\n",
     "cred_salt = os.urandom(16)\n",
@@ -121,7 +121,6 @@
     "        content = 'Here is a sample message for testing'\n",
     "\n",
     "        cipher.authenticate_additional_data(header)\n",
-    "        print(\"here\")\n",
     "        content = cipher.update(content.encode(\"utf-8\")) + cipher.finalize()\n",
     "\n",
     "        payload = {'header': header, 'content': content, 'iv':iv, 'tag': cipher.tag}\n",
@@ -134,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,22 +141,14 @@
      "output_type": "stream",
      "text": [
       "Emitter password: ········\n",
-      "here\n",
       "Reciever password: ········\n",
-      "Here is a sample message for testing\n"
+      "Received: Here is a sample message for testing\n"
      ]
     }
    ],
    "source": [
     "Connection(Emitter, Receiver, timeout=10).manual()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
