--- a/TP1/SecureCommunication.ipynb
+++ b/TP1/SecureCommunication.ipynb
@@ -156,7 +156,7 @@
     "\n",
     "$$ ptxt = D_k(ctxt \\oplus h(tweak)) \\oplus h(tweak) \\rightarrow D_k(E_k(ptxt \\oplus h(tweak)) \\oplus h(tweak) \\oplus h(tweak)) \\oplus h(tweak) \\rightarrow D_k(E_k(ptxt \\oplus h(tweak))) \\oplus h(tweak) \\rightarrow ptxt \\oplus h(tweak) \\oplus h(tweak) \\rightarrow ptxt $$\n",
     "\n",
-    "Este processo é implementado pela função `extractMessage` que recebe como parâmetros a chave acordada (`key`), o vetor de inicialização (`iv`), o *hash* do *tweak* (`tweak_h`) e o criptograma (`ctxt`), devolvendo o resultado de aplicar a \n"
+    "Este processo é implementado pela função `extractMessage` que recebe como parâmetros a chave acordada (`key`), o vetor de inicialização (`iv`), o *hash* do *tweak* (`tweak_h`) e o criptograma (`ctxt`), devolvendo o resultado de aplicar a expressão anteriormente apresentada.\n"
    ]
   },
   {
