--- a/TP1/SecureCommunication.ipynb
+++ b/TP1/SecureCommunication.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "Construção de uma sessão síncrona de comunicação segura entre dois agentes (o Emitter e o Receiver), combinando os seguintes elementos constituintes:\n",
-    "a cifra simétrica TAES (AES na sua versão tweak) usando autenticação do criptograma em cada superbloco.\n",
+    "a cifra simétrica TAES (AES na sua versão tweak) usando autenticação do criptograma em cada superbloco; \n",
     "o protocolo de acordo de chaves Diffie-Hellman com verificação da chave, e autenticação dos agentes através do esquema de assinaturas DSA.\n",
     "Use chaves DH/DSA de 3072 bits para acordo de chaves e autenticação dos agentes. Tenha em muita atenção os tempos de vida diferentes para as chaves acordadas (chaves de sessão) e as chaves no esquema de assinaturas (chaves “permanentes”)."
    ]
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,15 +67,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O uso do esquema Encrypt-then-MAC permitiu garantir a autenticidade, integridade e confidencialidade das mensagens trocadas entre o `Emitter` e o `Receiver`.\n",
+    "O uso do esquema Encrypt-then-MAC permite garantir a autenticidade, integridade e confidencialidade das mensagens trocadas entre o `Emitter` e o `Receiver`.\n",
     "Como tal, a cifra simétrica escolhida foi o AES (Advanced Encryption Standard) em modo CFB (Cipher Feedback Mode).\n",
-    "O MAC (Message Authentication Code) escolhido foi o HMAC (Hash-MAC) com SHA-256 que permitiu garantir a integridade\n",
-    "e autenticidade da mensagem trocada."
+    "O MAC (Message Authentication Code) escolhido foi o HMAC (Hash-MAC) com SHA-256 que permite, por sua vez, garantir a integridade e autenticidade da mensagem trocada."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,29 +127,32 @@
     "from cryptography.hazmat.backends import default_backend\n",
     "from cryptography.hazmat.primitives.ciphers import (Cipher, algorithms, modes)\n",
     "import os\n",
-    "from cryptography.hazmat.primitives.serialization import Encoding\n",
-    "from cryptography.hazmat.primitives.serialization import ParameterFormat\n",
     "\n",
     "def Emitter(conn):\n",
     "    pwd = getpass('Emitter password: ')\n",
     "    try:\n",
-    "        parameters = dh.generate_parameters(generator=5, key_size=2048,backend=default_backend())\n",
-    "        new_msg = parameters.parameter_bytes(Encoding.PEM,ParameterFormat.PKCS3)\n",
-    "        #TODO: send g^y mod p\n",
-    "        key = parameters.generate_private_key()\n",
-    "        #TODO: receive DH parameters\n",
-    "        #TODO: generate shared secret (key)\n",
+    "        parameters = dh.DHParameterNumbers(P,G).parameters(backend=default_backend()) #receive DH parameters\n",
+    "        priv_key = parameters.generate_private_key()\n",
+    "        conn.send(priv_key.public_key())                  #send g^y mod p\n",
+    "        g_x = conn.recv()\n",
+    "        key = priv_key.exchange(g_x)  #generate shared secret\n",
+    "        iv = os.urandom(16)\n",
     "        \n",
     "        header = 'msgheader'.encode(\"utf-8\")\n",
     "        content = 'Here is a sample message for testing'\n",
     "        \n",
-    "        iv = os.urandom(16)\n",
     "        cipher = Cipher(algorithms.AES(key),modes.CFB(iv),backend).encryptor()\n",
+    "        \n",
     "        #TODO: compute tweak hash\n",
     "        content_new = cipher.update(content.encode(\"utf-8\")) + cipher.finalize()\n",
-    "        h = hmac.HMAC(tweak, hashes.SHA256(), backend=default_backend())\n",
+    "        h_key = os.urandom(12)\n",
+    "        tweak_h = hmac.HMAC(h_key, hashes.SHA256(), backend=default_backend()).update(tweak)\n",
+    "        \n",
     "        #TODO: compute HMAC  of content_new and send in tag\n",
-    "        payload = {'header': header, 'content': content_new, 'iv':iv, 'm_hmac': m_hmac, ''}\n",
+    "        tag = hmac.HMAC(h_key, hashes.SHA256(), backend=default_backend()).update(content_new)\n",
+    "        conn.send(tag)\n",
+    "        \n",
+    "        payload = {'header': header, 'content': content_new, 'iv':iv, 'h_key': h_key,'m_hmac': m_hmac, 'tweak_h': tweak_h}\n",
     "        conn.send(payload)\n",
     "        conn.close()\n",
     "    except:\n",
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +204,9 @@
     "        ctxt = payload['content']\n",
     "        iv = payload['iv']\n",
     "        m_hmac = payload['m_hmac']\n",
+    "        h_key = payload['h_key']\n",
     "        tweak_h = payload['tweak_h']\n",
+    "        \n",
     "        if verifyHMAC(h_key, m_hmac, header+ctxt):\n",
     "            msg = extractMessage(c_key, ctxt, tweak_h)\n",
     "            print(\"Received: \" + msg.decode(\"utf-8\"))\n",
@@ -218,6 +222,22 @@
     "O estabelecimento de uma conexão entre os dois intervenientes (`Emitter` e `Receiver`)  é feita invocando o método `auto` da classe `Connection` que cria uma comunicação síncrona entre ambos. \n",
     "Este sincronismo é exigido pelo protocolo de troca de chaves (Diffie Hellman)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Connection(Emitter, Receiver, timeout=10).auto()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -236,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
