DH shared key is now expanded via HKDF to obtain HMAC key and cipher key

--- a/TP1/SecureCommunication.ipynb
+++ b/TP1/SecureCommunication.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +81,7 @@
     "from cryptography.hazmat.backends import default_backend\n",
     "from cryptography.hazmat.primitives import hashes, hmac\n",
     "from cryptography.hazmat.primitives.ciphers import algorithms, modes\n",
+    "from cryptography.hazmat.primitives.kdf.hkdf import HKDF\n",
     "import os\n",
     "\n",
     "# DH Parameters\n",
@@ -107,7 +108,14 @@
     "    \"\"\"\n",
     "    decryptor = Cipher(algorithms.AES(key), modes.CFB(iv), backend=default_backend()).decryptor()\n",
     "    ptxt = (decryptor.update(ctxt ^ tweak_h) + decryptor.finalize()) ^ tweak_h\n",
-    "    return ptxt"
+    "    return ptxt\n",
+    "\n",
+    "def deriveKey(key_base, key_size, info):\n",
+    "    \"\"\" Expands key from key_base to key_size bytes\n",
+    "    \"\"\"\n",
+    "    key = HKDF(hashes.SHA256(), length=key_size, salt=None, info=info, backend=default_backend()).deriveKey(key_base)\n",
+    "    return key\n",
+    "    "
    ]
   },
   {
@@ -119,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,24 +143,26 @@
     "        priv_key = parameters.generate_private_key()\n",
     "        conn.send(priv_key.public_key())                  #send g^y mod p\n",
     "        g_x = conn.recv()\n",
-    "        key = priv_key.exchange(g_x)  #generate shared secret\n",
-    "        iv = os.urandom(16)\n",
+    "        s_key = priv_key.exchange(g_x)  #generate shared secret\n",
+    "        \n",
+    "        #TODO: derive h_key and c_key from s_key\n",
     "        \n",
     "        header = 'msgheader'.encode(\"utf-8\")\n",
     "        content = 'Here is a sample message for testing'\n",
     "        \n",
-    "        cipher = Cipher(algorithms.AES(key),modes.CFB(iv),backend).encryptor()\n",
+    "        iv = os.urandom(16)\n",
+    "        cipher = Cipher(algorithms.AES(c_key),modes.CFB(iv),backend).encryptor()\n",
     "        \n",
     "        #TODO: compute tweak hash\n",
     "        content_new = cipher.update(content.encode(\"utf-8\")) + cipher.finalize()\n",
-    "        h_key = os.urandom(12)\n",
-    "        tweak_h = hmac.HMAC(h_key, hashes.SHA256(), backend=default_backend()).update(tweak)\n",
+    "        # tweak_h = hash of tweak value\n",
+    "        #tweak_h = hmac.HMAC(h_key, hashes.SHA256(), backend=default_backend()).update(tweak)\n",
     "        \n",
-    "        #TODO: compute HMAC  of content_new and send in tag\n",
-    "        tag = hmac.HMAC(h_key, hashes.SHA256(), backend=default_backend()).update(content_new)\n",
+    "        #TODO: compute HMAC of header+content_new+iv+tweak_h and send in tag\n",
+    "        m_hmac = hmac.HMAC(h_key, hashes.SHA256(), backend=default_backend()).update(content_new)\n",
     "        conn.send(tag)\n",
     "        \n",
-    "        payload = {'header': header, 'content': content_new, 'iv':iv, 'h_key': h_key,'m_hmac': m_hmac, 'tweak_h': tweak_h}\n",
+    "        payload = {'header': header, 'content': content_new, 'iv':iv, 'm_hmac': m_hmac, 'tweak_h': tweak_h}\n",
     "        conn.send(payload)\n",
     "        conn.close()\n",
     "    except:\n",
@@ -165,7 +175,7 @@
    "source": [
     "## Receiver\n",
     "\n",
-    "O Receiver, após a troca de chaves, e cada mensagem recebida, efetua uma verificação da autenticidade e integridade da mesma com recurso à função `verifyHMAC` que recebe como parâmetro a chave usada no cálculo do MAC, o MAC esperado e o *input* sobre o qual este deve ser calculado.\n",
+    "O Receiver, após a troca de chaves, e a cada mensagem recebida, efetua uma verificação da autenticidade e integridade da mesma com recurso à função `verifyHMAC` que recebe como parâmetro a chave usada no cálculo do MAC, o MAC esperado e o *input* sobre o qual este deve ser calculado.\n",
     "\n",
     "Caso a mensagem recebida não tenha sido modificada, o `Receiver` procede ao processo de decifragem. Dado tratar-se de\n",
     "uma mensagem cifrada com **TAES** é necessário manipular o criptograma de modo a obter a mensagem original, sendo útil ter em conta a seguinte expressão para o processo de decifragem:\n",
@@ -186,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,17 +207,20 @@
     "        g_y = conn.recv()\n",
     "        priv_key = parameters.generate_private_key()\n",
     "        conn.send(priv_key.public_key())                   #send g^x mod y\n",
-    "        key = priv_key.exchange(g_y)\n",
+    "        \n",
+    "        s_key = priv_key.exchange(g_y)\n",
+    "        d_key = deriveKey(key, 32, b\"DH Key Exchange\")\n",
+    "        c_key = d_key[:128]\n",
+    "        h_key = d_key[128:]\n",
     "        \n",
     "        payload = conn.recv()\n",
     "        header = payload['header']\n",
     "        ctxt = payload['content']\n",
     "        iv = payload['iv']\n",
     "        m_hmac = payload['m_hmac']\n",
-    "        h_key = payload['h_key']\n",
     "        tweak_h = payload['tweak_h']\n",
     "        \n",
-    "        if verifyHMAC(h_key, m_hmac, header+ctxt):\n",
+    "        if verifyHMAC(h_key, m_hmac, header+ctxt+iv+tweak_h):\n",
     "            msg = extractMessage(c_key, ctxt, tweak_h)\n",
     "            print(\"Received: \" + msg.decode(\"utf-8\"))\n",
     "        conn.close()\n",
@@ -222,22 +235,6 @@
     "O estabelecimento de uma conexão entre os dois intervenientes (`Emitter` e `Receiver`)  é feita invocando o método `auto` da classe `Connection` que cria uma comunicação síncrona entre ambos. \n",
     "Este sincronismo é exigido pelo protocolo de troca de chaves (Diffie Hellman)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Connection(Emitter, Receiver, timeout=10).auto()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -256,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
