--- a/TP1/SecureCommunication.ipynb
+++ b/TP1/SecureCommunication.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,10 @@
     "        g_x = conn.recv()\n",
     "        s_key = priv_key.exchange(g_x)  #generate shared secret\n",
     "        \n",
-    "        #TODO: derive h_key and c_key from s_key\n",
+    "        #derive h_key and c_key from s_key\n",
+    "        d_key = deriveKey(s_key, 256, info)\n",
+    "        c_key = d_key[:128] \n",
+    "        h_key = d_key[128:256]\n",
     "        \n",
     "        header = 'msgheader'.encode(\"utf-8\")\n",
     "        content = 'Here is a sample message for testing'\n",
@@ -153,14 +156,17 @@
     "        iv = os.urandom(16)\n",
     "        cipher = Cipher(algorithms.AES(c_key),modes.CFB(iv),backend).encryptor()\n",
     "        \n",
-    "        #TODO: compute tweak hash\n",
+    "        #compute tweak hash (tweak_h = hash of tweak value)\n",
     "        content_new = cipher.update(content.encode(\"utf-8\")) + cipher.finalize()\n",
-    "        # tweak_h = hash of tweak value\n",
-    "        #tweak_h = hmac.HMAC(h_key, hashes.SHA256(), backend=default_backend()).update(tweak)\n",
+    "        \n",
+    "        digest = hashes.Hash(hashes.SHA256(), backend = default_backend())\n",
+    "        tweak_h = digest.update(tweak) + digest.finalize()\n",
     "        \n",
     "        #TODO: compute HMAC of header+content_new+iv+tweak_h and send in tag\n",
-    "        m_hmac = hmac.HMAC(h_key, hashes.SHA256(), backend=default_backend()).update(content_new)\n",
+    "        m_hmac = hmac.HMAC(h_key, hashes.SHA256(), backend = default_backend())\n",
+    "        tag = m_hmac.update(header + content_new + iv + tweak_h) + m_hmac.finalize()\n",
     "        conn.send(tag)\n",
+    "        \n",
     "        \n",
     "        payload = {'header': header, 'content': content_new, 'iv':iv, 'm_hmac': m_hmac, 'tweak_h': tweak_h}\n",
     "        conn.send(payload)\n",
@@ -196,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
