--- a/TP1/SecureCommunication.ipynb
+++ b/TP1/SecureCommunication.ipynb
@@ -146,9 +146,9 @@
     "        s_key = priv_key.exchange(g_x)  #generate shared secret\n",
     "        \n",
     "        #derive h_key and c_key from s_key\n",
-    "        d_key = deriveKey(s_key, 256, info)\n",
-    "        c_key = d_key[:128] \n",
-    "        h_key = d_key[128:256]\n",
+    "        d_key = deriveKey(key, 32, b\"DH Key Exchange\")\n",
+    "        c_key = d_key[:128]\n",
+    "        h_key = d_key[128:]\n",
     "        \n",
     "        header = 'msgheader'.encode(\"utf-8\")\n",
     "        content = 'Here is a sample message for testing'\n",
